vitrail-pg-macros/tests/ui/fail/duplicate_field.stderr
error: duplicate field `id` in model `user`
 --> tests/ui/fail/duplicate_field.rs:8:9
  |
8 |         id Int
  |         ^^

error: first declaration of this field
 --> tests/ui/fail/duplicate_field.rs:7:9
  |
7 |         id Int @id
  |         ^^
